enums3/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================
Diff in /home/runner/work/rustlings-dweeqhd/rustlings-dweeqhd/format_check/src/main.rs:20:
     color: (u8, u8, u8),
     position: Point,
     quit: bool,
-    message: String
+    message: String,
 }
 
 impl State {
Diff in /home/runner/work/rustlings-dweeqhd/rustlings-dweeqhd/format_check/src/main.rs:32:
         self.quit = true;
     }
 
-    fn echo(&mut self, s: String) { self.message = s }
+    fn echo(&mut self, s: String) {
+        self.message = s
+    }
 
     fn move_position(&mut self, p: Point) {
         self.position = p;


// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-dweeqhd/rustlings-dweeqhd/format_check)
error[E0601]: `main` function not found in crate `format_check`
  --> src/main.rs:72:2
   |
72 | }
   |  ^ consider adding a `main` function to `src/main.rs`

warning: unused variable: `message`
  --> src/main.rs:41:27
   |
41 |     fn process(&mut self, message: Message) {
   |                           ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_message`
   |
   = note: `#[warn(unused_variables)]` on by default

For more information about this error, try `rustc --explain E0601`.
warning: `format_check` (bin "format_check") generated 1 warning
error: could not compile `format_check` (bin "format_check") due to 1 previous error; 1 warning emitted

[!] Source code format check: FAILED
